# jarvis

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  SpacerSmall.qml  app.cpp  app.h  clang-tools.cmake  jarvis-config.cmake  jarvis_config.cmake  jarvis_config.h  measurement.cpp  qml.qrc  roomservice.cpp  toolchain-rpi.cmake
sh/: build-macos.sh  build-rpi.sh  qt-install-module.sh
src/: CMakeLists.txt  DGauge.qml  Forecast.qml  ImageWithOverlay.qml  MainWindow.qml  Meter.qml  Summary.qml  Weather.qml  app.cpp  app.hpp  appsettings.cpp  appsettings.hpp  assets.qrc  main.cpp  main.qml  qml.qrc
src/controller/: roomservice.h
src/libjarvis/: CMakeLists.txt  airquality.cpp  airquality.hpp  airqualityservice.cpp  airqualityservice.hpp  currency.cpp  currency.hpp  currencyservice.cpp  currencyservice.hpp  currentweather.cpp  currentweather.hpp  exchangerate.cpp  exchangerate.hpp  forecastweather.cpp  forecastweather.hpp  locationinfo.hpp  locationservice.cpp  locationservice.hpp  measurement.cpp  measurement.hpp  roomservice.cpp  roomservice.hpp  weatherservice.cpp  weatherservice.hpp
src/tests/: CMakeLists.txt  test_measurement.cpp
src/view/: CMakeLists.txt  Meter.qml
